<resources>
    <string name="app_name">Train_Food_Order_App</string>
    <string name="orderText">Order</string>
    <string name="qtr">QUANTITY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="information">Information</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="additional_comments">Additional Comments</string>
    <string name="email_address">Email Address</string>
    <string name="payment">payment</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="lunch">Lunch</string>
    <string name="status">Status</string>
    <string name="title_activity_main2">MainActivity2</string>
</resources>