<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Payment_Fragment">


    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blurView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:blurOverlayColor="@color/colorOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/margin10">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10"
            android:layout_gravity="center"
            android:elevation="@dimen/margin10"
            app:cardCornerRadius="@dimen/margin10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/margin10">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="@dimen/margin5"
                    android:gravity="center_vertical"
                    android:text="@string/information"
                    android:textSize="20sp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black" />

                <EditText
                    android:id="@+id/nameBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:padding="15dp" />

                <EditText
                    android:id="@+id/emailBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"

                    android:ems="10"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:padding="15dp" />

                <EditText
                    android:id="@+id/phoneBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:padding="15dp" />


                <EditText
                    android:id="@+id/commentBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:hint="@string/additional_comments"
                    android:inputType="textPersonName"
                    android:padding="15dp" />

                <Button
                    android:id="@+id/payBtn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/lightPink"
                    android:text="@string/payment"
                    android:textAllCaps="false"
                    android:textSize="@dimen/textSize18" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </eightbitlab.com.blurview.BlurView>
</androidx.constraintlayout.widget.ConstraintLayout>