<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MenuSelection_Fragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/dinnerView"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:backgroundTint="@color/lightPink"
        android:elevation="@dimen/margin10"
        app:cardCornerRadius="@dimen/margin10"
        android:layout_marginTop="@dimen/margin5"
        android:layout_marginStart="@dimen/margin5"
        android:layout_alignParentStart="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin20"
                android:src="@drawable/dinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtDinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dinner"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize24"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLunch"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:backgroundTint="@color/lightPink"
        android:elevation="@dimen/margin10"
        app:cardCornerRadius="@dimen/margin10"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin5"
        android:layout_marginEnd="@dimen/margin5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin20"
                android:src="@drawable/lunch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunch"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize24"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView1" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewBreakFast"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:backgroundTint="@color/lightPink"
        android:layout_marginTop="@dimen/margin10"
        android:elevation="@dimen/margin10"
        app:cardCornerRadius="@dimen/margin10"

        android:layout_marginStart="@dimen/margin5"
        android:layout_alignParentStart="true"
        android:layout_below="@id/dinnerView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin20"
                android:src="@drawable/breakfast"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BreakFast"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize24"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSnack"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:backgroundTint="@color/lightPink"
        android:elevation="@dimen/margin10"
        app:cardCornerRadius="@dimen/margin10"
        android:layout_below="@id/cardViewLunch"
        android:layout_marginTop="@dimen/margin10"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin5"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin20"
                android:src="@drawable/snack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/snack"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize24"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>